                      | | | | | ||  _||  __/| | | | | |
                      |_| |_| |_||_|   \___||_| |_| |_|

                               https://mfem.org


Version 4.2.1 (development)
===========================
- Added support for parallel non-conforming, non-matching, variational, volumetric
  mesh information transfer using ParMoonolith (https://bitbucket.org/zulianp/par_moonolith).
- Added initial support for GPU-accelerated versions of PETSc that works with
  MFEM_USE_CUDA if PETSc has been configured with CUDA support. Examples 1 and 9
  in the examples/petsc directory have been modified to work with --device cuda.
  Examples with GAMG (ex1p) and SLEPc (ex11p) are also provided.

- Memory management:
  * Added method Device::SetMemoryTypes that can be used to change the default
    host and device MemoryTypes before Device setup.
  * In class MemoryManager, added methods GetDualMemoryType and
    SetDualMemoryType; dual MemoryTypes are used to determine the second
    MemoryType (host or device) when only one MemoryType is specified in methods
    of class Memory.
  * Added Memory constructor for setting both the host and device MemoryTypes.
  * Switched the default behavior of device memory allocations so that they
    are deferred until the device pointer is needed.
  * Added a second Umpire device MemoryType, DEVICE_UMPIRE_2, with
    corresponding allocator that can be set with the method
    MemoryManager::SetUmpireDevice2AllocatorName.
  * Added HOST_PINNED MemoryType and a pinned host allocator for CUDA and HIP.

- Added support for Caliper: a library to integrate performance profiling
  capabilities into applications. See examples/caliper for more details.

- Added support for explicit vectorization in the high-performance templated
  code for Fujitsu's A64FX ARM microprocessor architecture.

- Added AlgebraicCeedSolver that does matrix-free algebraic p-multigrid for
  diffusion problems with the Ceed backend.
