@@ -73,9 +73,6 @@ if (MFEM_USE_MPI)
     )
 endif()
 
-
-
-
 # Include the source directory where mfem.hpp and mfem-performance.hpp are.
 include_directories(BEFORE ${PROJECT_BINARY_DIR})
 
